--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Playwrite+US+Modern:wght@100..400&family=Playwrite+VN:wght@100..400&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-font1{
+    font-family: "Playwrite US Modern", cursive;
+    color: crimson;
+}
+.custom-font2{
+    font-family: "Playwrite VN", cursive;
+    color: crimson;
+}
